Redirect user to blog front page on log in. Fix diplay issues on mobile for blog posts.

--- a/wp-content/themes/Theme/stylesheets/scss/modules/_blog_post.scss
+++ b/wp-content/themes/Theme/stylesheets/scss/modules/_blog_post.scss
@@ -26,6 +26,8 @@
 	// padding-top: 40px;
 	// position: relative;
 	// top: 43px;
+	max-width: 100vw;
+	overflow: hidden;
 	.other-posts {
 		text-align: left;
 		font-size: 28px;
@@ -44,8 +46,9 @@
 		min-height: 412px;
 		left: 50%;
 		transform: translateX(-50%);
-		width: 75%;
+		// width: 75%;
 		@media screen and (max-width: 990px) {
+			padding: 2rem;
 			width: 100%;
 		}
 		&__title {
@@ -175,7 +178,7 @@
 				margin: 0px auto;
 				padding: 0;
 				&:first-child {
-					font-size: 50px;
+					font-size: 3rem;
 					line-height: 1;
 					margin: 0px auto 20px auto;
 					font-family: $font-accent;
