--- a/wp-content/themes/Theme/stylesheets/scss/modules/header/_header.scss
+++ b/wp-content/themes/Theme/stylesheets/scss/modules/header/_header.scss
@@ -6,6 +6,7 @@
 	left: 0px;
 	width: 100%;
 	z-index: 10;
+	max-width: 100vw;
 	@include transition(all .3s ease-in-out);
 	@include clearfix;
 		&.active {
